--- a/portfolio.html
+++ b/portfolio.html
@@ -133,7 +133,8 @@ ul.task-list li input[type="checkbox"] {
     <h2 id="toc-title">On this page</h2>
    
   <ul>
-  <li><a href="#courses" id="toc-courses" class="nav-link active" data-scroll-target="#courses">Courses</a></li>
+  <li><a href="#interactive-simulations" id="toc-interactive-simulations" class="nav-link active" data-scroll-target="#interactive-simulations">Interactive Simulations</a></li>
+  <li><a href="#courses" id="toc-courses" class="nav-link" data-scroll-target="#courses">Courses</a></li>
   <li><a href="#data-science-projects-and-curriculum" id="toc-data-science-projects-and-curriculum" class="nav-link" data-scroll-target="#data-science-projects-and-curriculum">Data Science Projects and Curriculum</a></li>
   <li><a href="#tools" id="toc-tools" class="nav-link" data-scroll-target="#tools">Tools</a></li>
   <li><a href="#technical" id="toc-technical" class="nav-link" data-scroll-target="#technical">Technical</a></li>
@@ -166,6 +167,15 @@ ul.task-list li input[type="checkbox"] {
 
 </header>
 
+<section id="interactive-simulations" class="level3">
+<h3 class="anchored" data-anchor-id="interactive-simulations">Interactive Simulations</h3>
+<blockquote class="blockquote">
+<p>The following interactive simulations were created for educational purposes using R, RStudio, and Shiny. These simulations are hosted on an AWS server running Shiny Server software.</p>
+</blockquote>
+<ul>
+<li><a href="http://ec2-user@ec2-3-142-219-220.us-east-2.compute.amazonaws.com:3838/gamblers_ruin/">Markov Chain Simulation: Gambler’s Ruin</a></li>
+</ul>
+</section>
 <section id="courses" class="level3">
 <h3 class="anchored" data-anchor-id="courses">Courses</h3>
 <blockquote class="blockquote">
