--- a/portfolio.html
+++ b/portfolio.html
@@ -177,6 +177,7 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
+<!-- new -->
 <section id="creative-coding-with-generative-ai-and-processing" class="level3">
 <h3 class="anchored" data-anchor-id="creative-coding-with-generative-ai-and-processing">Creative Coding with Generative AI and Processing</h3>
 <blockquote class="blockquote">
